--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "com.zlitz.bettertile",
 	"displayName": "Zlitz's Better Tile",
+	"author": "ZlitzGames",
 	"version": "1.0.0",
 	"unity": "2022.3",
-	"description": "",
-	"main": "README.md",
+	"description": "Add an editor tool for easier tile workflow.",
+	"license": "MIT",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/zlitzdev/BetterTile.git"
@@ -13,10 +14,5 @@
 		"2d",
 		"tilemap",
 		"tile"
-	],
-	"author": "ZlitzGames",
-	"bugs": {
-		"url": "https://github.com/zlitzdev/BetterTile/issues"
-	},
-	"homepage": "https://github.com/zlitzdev/BetterTile#readme"
+	]
 }
