--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		{
             "displayName": "Neon Dirt & Grass",
             "description": "Example tileset demonstrating basic connection rules and decorator",
-            "path": "Samples~/Sample_NeonTile"
+            "path": "Samples~/Sample_NeonTileSet"
         },
 	]
 }
